@@ -1,17 +1,15 @@
 package com.br.employee.registration.service;
 
+import java.util.List;
+
+import org.springframework.stereotype.Service;
+
 import com.br.employee.registration.exception.EmployeeAlreadyExistException;
 import com.br.employee.registration.exception.EmployeeNotFoundException;
-import com.br.employee.registration.model.domain.AddressDomain;
 import com.br.employee.registration.model.domain.EmployeeDomain;
 import com.br.employee.registration.model.dto.request.EmployeeRequest;
 import com.br.employee.registration.model.dto.response.EmployeeResponse;
-import com.br.employee.registration.repository.AddressRepository;
 import com.br.employee.registration.repository.EmployeeRepository;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import org.springframework.stereotype.Service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,7 +20,6 @@ import lombok.extern.slf4j.Slf4j;
 public class EmployeeService {
 
     private final EmployeeRepository employeeRepository;
-    private final AddressRepository addressRepository;
 
     public EmployeeResponse createEmployee(EmployeeRequest employeeRequest) {
         employeeRepository.findByName(employeeRequest.getName())
@@ -38,13 +35,13 @@ public class EmployeeService {
     public List<EmployeeResponse> getEmployees() {
         return employeeRepository.findAll().stream()
                 .map(EmployeeResponse::valueOf)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public EmployeeResponse getEmployeeById(String employeeId){
+    public EmployeeResponse getEmployeeById(String employeeId) {
         var employee = employeeRepository.findById(employeeId)
-            .orElseThrow(() -> new EmployeeNotFoundException("Employee not found with id: " + employeeId));
+                .orElseThrow(() -> new EmployeeNotFoundException("Employee not found with id: " + employeeId));
 
-       return EmployeeResponse.valueOf(employee);
+        return EmployeeResponse.valueOf(employee);
     }
 }
